# Algorithms-and-Data-Structures

./: CMakeLists.txt  README.md  todo.md
data_structuresUnitTests/: CMakeLists.txt
data_structuresUnitTests/tests/: segment_treeTest.cpp
graphs/: dijkstras_algorithm.md  strongly-connected-components.md
graphs/include/: strongly_connected_components.hpp
info/: template.md
info/graphs/: strongly-connected-components.md
public/: BinaryTree.h  __BinaryTree.h  graphs.h  segment_tree.hpp
public/Binary Search Tree/: bst1.cpp  bst2.cpp  bst3.cpp  bst4.cpp  bst5.cpp
src/: trigger_lib_creation.cpp  Алгоритм Флойда – Уоршелла.cpp
